tests/baselines/reference/amdModuleName2.errors.txt
tests/cases/compiler/amdModuleName2.ts(2,1): error TS2458: An AMD module cannot have multiple name assignments.


==== tests/cases/compiler/amdModuleName2.ts (1 errors) ====
    ///<amd-module name='FirstModuleName'/>
    ///<amd-module name='SecondModuleName'/>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2458: An AMD module cannot have multiple name assignments.
    class Foo {
        x: number;
        constructor() {
            this.x = 5;
        }
    }
    export = Foo;
    